name:                example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/daniel-j-h/example#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel J. Hofmann
maintainer:          daniel@trvx.org
copyright:           Daniel J. Hofmann
category:            Example
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable example
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base       >= 4.7  && < 5,
    text       >= 1.2  && < 1.3,
    aeson      >= 1.0  && < 1.1,
    lens       >= 4.15 && < 4.16,
    lens-aeson >= 1.0 && < 1.1
